--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
             { node: document.getElementById('elm')
             , flags : { initialWidth : window.innerWidth
                       , initialHeight : window.innerHeight
+                      , essay : "essay markdown"
+                      , bullets : "bullets markdown"
                       } 
             }
         )
