with-responsive: savepoint

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     { node: document.getElementById('elm')
                     , flags : { initialWidth : window.outerWidth
                               , initialHeight : window.outerHeight
+                              , devicePixelRatio : window.devicePixelRatio
                               , essay : essay
                               , bullets : bullets
                               , preferences : JSON.parse(localStorage.getItem('preferences'))
